Pieuvre/tests/Proofs/ShouldFail/notintro.8pus
Goal A -> A.
intro. intro.
assumption.
Qed.
